--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@date-io/date-fns": "^2.13.1",
+    "@babel/core": "^7.17.9",
+    "@babel/preset-env": "^7.16.11",
+    "@date-io/date-fns": "^1.3.13",
     "@date-io/dayjs": "^2.13.1",
     "@date-io/luxon": "^2.13.1",
     "@date-io/moment": "^2.13.1",
@@ -13,6 +15,7 @@
     "@mui/icons-material": "^5.6.0",
     "@mui/material": "^5.5.3",
     "@mui/styles": "^5.6.0",
+    "@mui/x-date-pickers": "^5.0.0-alpha.0",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -20,6 +23,7 @@
     "jsonwebtoken": "^8.5.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-otp-input": "^2.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
